# TrustRAG

./: .env.example  .gitignore  LICENSE  README.md  create_structure.py  main.py  pyproject.toml
data/sources/: sebi_sources.yaml
docs/: architecture.md  roadmap.md
src/trustrag/: __init__.py
src/trustrag/ingestion/: chunking.py  loaders.py  pipeline.py
src/trustrag/retrieval/: bm25.py  embeddings.py  hybrid.py  vector_store.py
tests/: test_chunking.py  test_embeddings.py  test_hybrid_retrieval.py  test_loaders.py  test_pipeline.py  test_retrieval.py  test_vector_store.py
