[project]
name = "trustrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "RazaMasood", email = "razamasood954@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.4",
    "langgraph>=1.2.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
]

[project.scripts]
trustrag = "trustrag:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
